packages/components/src/css/component/Pane.module.scss
@use '../../css/mixin';

.pane {
    composes: basePaneStructure from './base/Pane.module.scss';
}

.paneDefault {
    composes: pane;

    box-shadow: var(--shadow-sm);
}

.paneFlat {
    composes: pane;
}

.paneWell {
    composes: pane;

    background-color: var(--gray-50);
}

:is(.paneDefault, .paneFlat, .paneWell):is(a) {
    color: currentColor;
    text-decoration: unset;

    @include mixin.hover {
        color: currentColor;
    }
}

:is(.paneDefault, .paneFlat, .paneWell):is(button) {
    padding: 0;
}

:is(.paneDefault, .paneFlat, .paneWell):is(a, button) {
    cursor: pointer;
    transition: 210ms var(--swift-out);
    transition-property: background, border-color, box-shadow;

    @include mixin.hover {
        border-color: var(--surface-stroke-out-hover);
        box-shadow: var(--shadow-lg);
    }

    &:active {
        box-shadow: var(--shadow-xs);
    }
}

:is(.paneDefault, .paneFlat, .paneWell):is(:disabled, [aria-disabled=true]) {
    background-color: var(--surface-disabled);
    box-shadow: none;
    pointer-events: none;

    & > * {
        opacity: .5;
    }
}

.paneHeader {
    composes: basePaneElement from './base/Pane.module.scss';

    display: flex;
    padding: 18px 18px 0;
    gap: 15px;

    &:only-child {
        padding: 18px;
    }

    &:not(:has(+ .paneBody)) {
        padding: 18px;
    }
}

.paneHeaderCaption {
    display: flex;
    flex-flow: column;
    flex-grow: 1;
    line-height: 24px;

    :is(strong) {
        color: var(--foreground-prominent);
        font-weight: 600;

        &:has(+ :is(span)) {
            font-size: 16px;
        }
    }

    :is(span) {
        font-size: 14px;
    }
}

.paneHeaderIcon {
    margin-top: 2px;
    color: var(--primary-600);
}

.paneHeaderClickable {
    color: inherit;
    cursor: pointer;
    text-decoration: none;
    transition: 210ms var(--swift-out);
    transition-property: background, mixin.focus-ring-transition-properties();

    @include mixin.focus-ring(-2px);

    @include mixin.hover {
        background: var(--surface-hover);

        .paneHeaderChevron {
            color: var(--foreground);
            transform: translateX(3px);
        }
    }

    &:active {
        background: var(--surface-active);
    }

    &:is(:disabled, [aria-disabled=true]) {
        cursor: default;
        pointer-events: none;

        & > * {
            opacity: .5;
        }
    }
}

.paneHeaderChevron {
    margin-top: 2px;
    flex-shrink: 0;
    color: var(--foreground-secondary);
    transition: 210ms var(--swift-out);
    transition-property: color, transform;
}

.paneBody {
    composes: basePaneElement from './base/Pane.module.scss';

    padding: 18px;
}

.paneBody + .paneBody {
    padding-top: 0;
}

.paneFooter {
    composes: basePaneElement from './base/Pane.module.scss';

    display: flex;
    padding: 18px;
    gap: 9px;
    background: var(--gray-50);
    border-top: 1px solid var(--gray-100);
}

.paneLoader {
    composes: basePaneLoader from './base/Pane.module.scss';
}

.paneTag {
    position: absolute;
    top: 15px;
    right: 15px;
    padding: 6px 9px;
    background: var(--gray-900);
    border-radius: var(--radius-half);
    color: var(--gray-25);
    font-size: 11px;
    font-weight: 700;
    letter-spacing: 1px;
    line-height: 1;
    text-transform: uppercase;
}

.paneMedia {
    position: relative;
    overflow: hidden;
    z-index: 0;

    &::after {
        position: absolute;
        inset: 0;
        content: '';
        border: 1px solid var(--surface-stroke-out);
        border-radius: inherit;
        z-index: 1;
    }
}

.paneMediaDefault {
    composes: paneMedia;

    &:first-child {
        margin: -1px;
        margin-bottom: 0;
        border-top-left-radius: var(--radius);
        border-top-right-radius: var(--radius);
    }

    &:not(:first-child)::after {
        border-top: 0;
    }

    &:not(:last-child)::after {
        border-bottom: 0;
    }
}

.paneMediaInset {
    composes: paneMedia;

    margin: 18px;
    border-radius: var(--radius-half);

    &:not(:first-child) {
        margin-top: 0;
    }

    &:not(:last-child) {
        margin-bottom: 0;
    }
}

.paneMediaImage {
    display: block;
    height: auto;
    width: 100%;
    margin: 0;
    aspect-ratio: 2 / 1;
    object-fit: cover;
    object-position: center;
}

.paneGroup {
    position: relative;
}

.paneGroup + .paneGroup {
    border-top: 1px solid var(--surface-stroke);
}

[data-flux-pane-illustration] + :where(.paneBody, .paneHeader) {
    position: relative;
    margin-top: -60px;
}

.paneBody:has(.iconBoxed:only-child):has(+ .paneHeader) {
    padding-bottom: 0;
}

